--- a/kompanew.html
+++ b/kompanew.html
@@ -41,9 +41,9 @@
       <div class="eight columns">
         <div class="secondary">
           <div class="flex">
-            <h1>
+            <h3>
               Start your dream business today.
-            </h1>
+            </h3>
             <p>
               How can Artificial Intelligence and Machine Learning revolutionize bookkeeping for people on the verge of starting their own company? A strategic innovation project.
             </p>
@@ -117,15 +117,15 @@
 
   <div class="container moreprojects eaccounting">
     <div class="row">
-      <div class="three columns photo">
+      <div class="four columns photo">
         <div class="flex">
           <img src="images/appstore.png">
         </div>
       </div>
       <div class="eight columns presentation">
         <div class="flex">
-          <h1>Your economy on autopilot.</h1>
-          <span>Highlighting the potential of a 1-star app with a frustrated userbase of over 100.000 people, and developers that didn't dare to meet them.</span>
+          <h3>Your economy on autopilot.</h3>
+          <p>Highlighting the potential of a 1-star app with a frustrated userbase of over 100.000 people, and developers that didn't dare to meet them.</p>
           <div class="readmore">
             <a href="eaccounting.html" class="button-outlined" alt="Read more about Eaccounting">Read more</a>
           </div>
@@ -136,15 +136,15 @@
 
   <div class="container moreprojects isteveryday">
     <div class="row">
-      <div class="three columns photo">
+      <div class="four columns photo">
         <div class="flex">
           <img src="images/stylist-3.png">
         </div>
       </div>
       <div class="eight columns presentation">
         <div class="flex">
-          <h1>A school for everyone.</h1>
-          <span>Using design to make life easier for students, teachers, parents and administrators by building a design system for Scandinavia’s leading provider of school management software.</span>
+          <h3>A school for everyone.</h3>
+          <p>Using design to make life easier for students, teachers, parents and administrators by building a design system for Scandinavia’s leading provider of school management software.</p>
           <div class="readmore">
             <a href="isteveryday.html" class="button-outlined" alt="Read more about IST Everyday">Read more</a>
           </div>
@@ -164,8 +164,8 @@
     </div>
     <div class="row">
       <div class="eight columns">
-        <span>I'm always interested in making new connections and discussing ideas.<br>
-        Contact me on any of these networks if you want to collaborate:</span>
+        <p>I'm always interested in making new connections and discussing ideas.<br>
+        Contact me on any of these networks if you want to collaborate:</p>
         <div class="social">
           <a href="https://www.linkedin.com/in/hagerhult" alt="Contact me on Linkedin">
               <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 512 512"><title>Contact me on Linkedin</title><path d="M444.17,32H70.28C49.85,32,32,46.7,32,66.89V441.61C32,461.91,49.85,480,70.28,480H444.06C464.6,480,480,461.79,480,441.61V66.89C480.12,46.7,464.6,32,444.17,32ZM170.87,405.43H106.69V205.88h64.18ZM141,175.54h-.46c-20.54,0-33.84-15.29-33.84-34.43,0-19.49,13.65-34.42,34.65-34.42s33.85,14.82,34.31,34.42C175.65,160.25,162.35,175.54,141,175.54ZM405.43,405.43H341.25V296.32c0-26.14-9.34-44-32.56-44-17.74,0-28.24,12-32.91,23.69-1.75,4.2-2.22,9.92-2.22,15.76V405.43H209.38V205.88h64.18v27.77c9.34-13.3,23.93-32.44,57.88-32.44,42.13,0,74,27.77,74,87.64Z"/></svg>
@@ -180,7 +180,7 @@
         </div>
       </div>
       <div class="four columns copy">
-        <span>You can find my resume <a target="_blank" rel="noopener noreferrer" href="Hagerhult_Resume.pdf" alt="Link to my resume, will open in a new tab.">here</a>.</span>
+        <p>You can find my resume <a target="_blank" rel="noopener noreferrer" href="Hagerhult_Resume.pdf" alt="Link to my resume, will open in a new tab.">here</a>.</p>
       </div>
     </div>
   </div>
