--- a/eaccounting.html
+++ b/eaccounting.html
@@ -108,8 +108,8 @@
       <div class="row extra-space">
         <div class="twelve columns">
           <p><h2>04. The Outcome</h2></p>
-          <p>When we started the eAccounting app had an AppStore rating of <b>1.4/5</b> and an NPS score of <b>4/10</b>. When I left the team the AppStore rating had increased to <b>4.4</b> and the NPS from the internal feedback tool was up to <b>7.9</b>. A big improvement, but we hope it will continue to increase.</p>
-          <p>Here are some reviews (translated from swedish) that we got after releasing some of our biggest improvements:</p>
+          <p>When we started the eAccounting app had an AppStore rating of <b>1.4/5</b> and an NPS score of <b>-31</b>. When I left the team the AppStore rating had increased to <b>4.4</b> and the NPS from the internal feedback tool was up to <b>44</b>. A big improvement, but we hope it will continue to increase.</p>
+          <p>Here are some reviews from AppStore (translated from swedish) that we got after releasing some of our biggest improvements:</p>
       </div>
     </div>
 
