--- a/kompanew.html
+++ b/kompanew.html
@@ -66,7 +66,7 @@
     <div class="row">
       <div class="twelve columns">
         <p><h2>01. The Brief</h2></p>
-          <p>I spent my first two years after graduation working with general usability improvements and user testing in Vismas legacy products. But after proving myself and learning a lot about working with UX in the real world I got the chance to work in a innovation project to try to predict the future of bookkeping to help Visma stay relative in the field for many years to come.</p>
+          <p>I spent my first two years after graduation working with general usability improvements and user testing in Vismas legacy products. But after proving myself and learning a lot about working with UX in the real world I got the chance to work in a innovation project to try to predict the future of bookkeping to help Visma stay relevant in the field for many years to come.</p>
       </div>
     </div>
 
