--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       <div class="row">
           <div class="six columns pitch">
             <div class="flex">
-              <p>I’m Johan Hägerhult, a UX Designer. For the past 9 years I’ve helped some of scandinavias most successful IT-companies to gain a better understanding of their users.</p>
+              <h2>I’m Johan Hägerhult, a UX Designer.</h2>
+              <p> For the past 9 years I’ve helped some of scandinavias most successful IT-companies to gain a better understanding of their users.</p>
               <p>These days I'm delivering award-winning mobile experiences at <a href="https://www.bontouch.com" alt="open bontouch website">Bontouch</a> innovation agency.</p>
             </div>
           </div>
