--- a/under_construction.html
+++ b/under_construction.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-  <div class="jumbotron under_construction">
+<div class="jumbotron2">
     <div class="container">
       <header>
         <div class="row">
@@ -30,25 +30,25 @@
           </div>
         </div>
       </header>
-    </div>
-    <div class="container">
-      <article class="work">
-            <div class="row">
-              <div class="six columns">
-                <div class="flex">
-                  <h2>This page is still under construction.</h2>
+      <div class="under_construction">
+      <div class="row">
+          <div class="flex">
+          <div class="six columns">
+            <div class="flex">
+               <h2>This page is still under construction.</h2>
                   <p>I'm currently updating my portfolio whenever I have the time. Please check back in a while or <a href="https://www.linkedin.com/in/hagerhult" alt="contact me on linkedin">reach out</a> to me directly if you are interested in knowing more.</p>
                   <span><a href="index.html" alt="Go back to the previous page">Back to portfolio</a></span>
-                </div>
-              </div>
-              <div class="six columns">
-                <div class="flex">
-                  <img src="images/underconstruction.png" alt="construction equipment illustration">
-                </div>
-              </div>
             </div>
-          </article>
+          </div>
+          <div class="six columns">
+             <div class="flex">
+                <img src="images/underconstruction.png" alt="construction equipment illustration">
+              </div>
+          </div>
       </div>
+    </div>
+    </div>
+    </div>
   </div>
 
 
