--- a/under_construction.html
+++ b/under_construction.html
@@ -72,7 +72,7 @@
         <div class="two columns offset-by-one">
           <ul>
             <li><h5>Links</h5></li>
-            <a target="_blank" rel="noopener noreferrer" href="Hagerhult_CV.pdf" alt="Read my CV, will open in a new tab.">CV</a>
+            <a target="_blank" rel="noopener noreferrer" href="Hagerhult_CV.pdf" alt="Read my CV, will open in a new tab."><li>CV</li></a>
             <a href="https://dribbble.com/snorunge" alt="check out my dribble"><li>Dribbble</li></a>
           </ul>
         </div>
