--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 </head>
 <body>
   <div class="jumbotron">
-    <div class="portrait">
+    <div class="profile">
+      <div class="portrait">
+      </div>
     </div>
     <div class="container">
       <header>
