--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <div class="six columns pitch">
             <div class="flex">
               <h2>I’m Johan Hägerhult, a UX Designer.</h2>
-              <p> For the past 9 years I’ve helped some of scandinavias most successful IT-companies to innovate by gaining a better understanding of their users.</p>
-              <p>Today I'm creating and delivering award-winning mobile experiences at <a href="https://www.bontouch.com" alt="open bontouch website">Bontouch</a>.</p>
+              <p> For the past 10 years I’ve helped some of Scandinavias most successful brands to create innovative products by gaining a better understanding of their users.</p>
+              <p>Today I'm designing and delivering award-winning mobile experiences at <a href="https://www.bontouch.com" alt="open bontouch website">Bontouch</a>.</p>
             </div>
           </div>
           <div class="six columns">
