--- a/referenser.html
+++ b/referenser.html
@@ -3,7 +3,7 @@
 <head>
 
  <meta charset="utf-8">
-  <title>P.Comstedt Bygg</title>
+  <title>Referenser</title>
   <meta name="description" content="Vi värdesätter en hög kvalité med fäste i Karlskrona & Växjö">
   <meta name="author" content="P.Comstedt Bygg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"> 
@@ -29,10 +29,10 @@
       <div class="row topbar">
         <div class="twelve columns">
             <a href="pcomstedt.html"><img class="logo" src="images/pcb/logo-mono.svg"></a>
-             <nav>
-          <a href="#services">Tjänster</a>
-          <a href="#about">Om företaget</a>
-          <a href="#contact">Kontakt</a>
+           <nav>
+          <a href="pcomstedt.html#services">Tjänster</a>
+          <a href="pcomstedt.html#about">Om företaget</a>
+          <a href="pcomstedt.html#contact">Kontakt</a>
           <a href="referenser.html">Referenser</a>
         </nav>
         </div>
@@ -40,104 +40,63 @@
     </header>
   </div>
 
-  <div class="jumbotron">
-  
-        <div class="pitch">
-          <div class="flex">
-            <h2>Vi värdesätter en hög kvalité med fäste i Karlskrona & Växjö.</h2>
-          </div>
-        </div>
-      </div>
-
-
-  <section id="services">
-    <div class="container">
-      <div class="row">
-        <div class="twelve columns">
-          <h3>Tjänster</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="twelve columns card nybyggnation">
-          <div class="flex">
-            <div class="text">
-              <h5>Nybyggnation</h5>
-              <p>Vi hjälper dig att förverkliga din husdröm. Tillsammans med er så går vi igenom era behov och önskemål för att hitta rätt väg i projektet.</p>
-            </div>
-        </div>
-        </div>
-      </div>
+<section>
+  <div class="container">
        <div class="row">
-        <div class="six columns card renovering">
-          <div class="flex">
-            <div class="text">
-              <h5>Renoveringar</h5>
-              <p>Dags att renovera? Vi går tillsammans igenom era tankar, idéer och visioner och tar fram en plan för ett smidigt genomförande.</p>
-            </div> 
-          </div>
-        </div>
-         <div class="six columns card tillbyggnation">
-          <div class="flex">
-            <div class="text">
-              <h5>Om/tillbyggnation</h5>
-              <p>Dags att bygga till eller bygga om? Vi har erfarenhet och kunskapen för alla slags om/tillbyggnader.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="about">
-    <div class="container">
-      <div class="row">
-        <div class="six columns">
-          <div class="flex">
-            <h3>Om företaget</h3>
-            <p>Vi är den personliga byggfirman som utför det mesta inom bygg och snickeri.</p> 
-            <p>Med flera års erfarenhet i branschen värdesätter vi en hög kvalité och en trygghet för våra kunder.</p>
-            <p>Vi utför projekt både till privatpersoner och företag i Karlskrona & Växjö.</p>
-         </div>
-        </div>
-        <div class="six columns">
-          <div class="flex">
-           <div class="portrait">
-           </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!--<section id="testamonials">
-    <div class="container">
-      <div class="row">
         <div class="twelve columns">
-          <h3>Vad mina kunder säger</h3>
+          <h3>Inspireras av tidigare projekt</h3>
+          <p class="center">Här visas en del av projekten som vi utfört. Vill du veta mer om något av projekten, välkommen att kontakta oss. </p>
         </div>
       </div>
-       <div class="row">
-        <div class="six columns card">
-          <p><span class="quote">"</span>Philips öga för detaljer är omatchat i branschen. Den enda byggaren vi kommer använda oss av i framtiden.</p>
-          <p class="signature">Annie & Gustav, renovering 2024</p>
-        </div>
-         <div class="six columns card">
-           <p><span class="quote">"</span>Så otroligt skönt att kunna lita på en byggare till hundra procent och inte behöva gå och oroa sig hela tiden.</p>
-          <p class="signature">Elin & Micke, husbygge 2023</p>
-        </div>
+    <div class="row">
+      <div class="six columns">
+        <image src="images/pcb/image0.jpg" />
       </div>
-      <div class="row">
-        <div class="six columns card">
-          <p><span class="quote">"</span>Philips öga för detaljer är omatchat i branschen. Den enda byggaren vi kommer använda oss av i framtiden.</p>
-          <p class="signature">Johan, kund 2023</p>
-        </div>
-         <div class="six columns card">
-           <p><span class="quote">"</span>Så otroligt skönt att kunna lita på en byggare till hundra procent och inte behöva gå och oroa sig hela tiden.</p>
-          <p class="signature">Lisa, kund 2024</p>
-        </div>
+      <div class="six columns">
+         <image src="images/pcb/image1.jpg" />
       </div>
     </div>
-  </section>-->
+    <div class="row">
+      <div class="four columns">
+        <image src="images/pcb/image2.jpg" />
+      </div>
+      <div class="four columns">
+         <image src="images/pcb/image3.jpg" />
+      </div>
+      <div class="four columns">
+         <image src="images/pcb/image4.jpg" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="six columns">
+        <image src="images/pcb/image5.jpg" />
+      </div>
+      <div class="six columns">
+         <image src="images/pcb/image6.jpg" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="four columns">
+        <image src="images/pcb/image7.jpg" />
+      </div>
+      <div class="four columns">
+         <image src="images/pcb/image8.jpg" />
+      </div>
+      <div class="four columns">
+         <image src="images/pcb/image11.jpg" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="six columns">
+        <image src="images/pcb/image10.jpg" />
+      </div>
+      <div class="six columns">
+         <image src="images/pcb/image9.jpg" />
+      </div>
+    </div>
+  </div>
+</section>
+ 
 
   <footer id="contact">
 
