--- a/pcomstedt.html
+++ b/pcomstedt.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=BIZ+UDGothic:wght@400;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/pcbskeleton.css">
   <link rel="stylesheet" href="css/pcb.css">
 
   <link rel="icon" href="images/pcb/favicon.ico" sizes="any">
